# mbox

./: .bumpversion.cfg  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
mtoolbox/: cache.py  click.py  datetime.py  itertools.py  magic.py  optional.py
mtoolbox/requests/: mock.py
stubs/: appdirs.pyi  dateparser.pyi
test/: test_cache.py  test_datetime.py
tests/: strategies.py  test_cache.py  test_click.py  test_countries.py  test_datetime.py  test_itertools.py  test_magic.py  test_optional.py  test_random.py  test_requests.py
tools/: gen-countries.py
