[tool.poetry]
name = "mtoolbox"
version = "0.1.3"
description = ""
authors = ["Maxime Mouchet <max@maxmouchet.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
click = {version = "^7.1.2", optional = true}
dateparser = {version = "^0.7.6", optional = true}

[tool.poetry.dev-dependencies]
hypothesis = "^5.20.2"
pre-commit = "^2.6.0"
pytest = {git = "https://github.com/pytest-dev/pytest.git", rev = "6.0.0rc1"}
pytest-cov = "^2.10.0"
sphinx = "^3.1.2"
mypy = "^0.782"

[tool.poetry.extras]
click = ["click", "dateparser"]

[tool.pytest.ini_options]
addopts = "--cov=mtoolbox --cov-report=xml"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
